# Oranguru

./: .dockerignore  Dockerfile  HACKING.md  README.md  docker-compose.yml  justfile
app/: achievements.html  demo.html  help.html  icon-normal.html  icon-notify.html  index.html  main.js  manifest.webmanifest  send.html  simple-customizations.css  style.css  sw.js  week.html  yjs.mjs
extra/: install_oranguru.sh  sitemap.xml
extra/private/: build_changes.py  deploy.sh
local/: .gitignore  README.md
local/package/: README.md  pyproject.toml
local/package/oranguru/: _cli.py  _client.py  _env.py  _exceptions.py
local/package/oranguru/legacy/: migrate_config.py
local/package/oranguru/local_server/: server.py
local/snapcraft/: oranguru-wrapper  requirements.txt  teardown.py
local/snapcraft/snap/: snapcraft.yaml
scripts/: build_server.sh  test_api.py  test_sdk.html
server/public/open/: post-claim-pairing.php  post-create-pairing.php  post-load-state.php  post-save-state.php  sdk.js
