[project]
name = "oranguru"
version = "2.0.4"
description = "Oranguru Local"
readme = "README.md"
license = "MIT"
authors = [
    {name="Dave Wilding", email="tech@dpw.me"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=2.2.5",
    "requests>=2.31.0",
]

[project.urls]
Documentation = "https://github.com/dwilding/oranguru/blob/main/local/README.md#oranguru-local"
Source = "https://github.com/dwilding/oranguru/tree/main/local"
Tracker = "https://github.com/dwilding/oranguru/issues"
Changelog = "https://github.com/dwilding/oranguru/releases"

[project.scripts]
oranguru = "oranguru._cli:main"
serve-oranguru = "oranguru.local_server.server:main"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
oranguru = [
    "local_server/**",
]
